--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "live-server": "^1.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.3"
   }
 }
